--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,14 @@
---- #YAML:1.0
 name: POE-API-Peek
-version: 0.01
+version: 1.23
+author: Matt Cashner (cpan@eekeek.org)
 license: bsd
 distribution_type: module
+build_requires:
+  Test::More: 0
 requires:
-  POE: '>= 0.2601'
   perl: 5.6.1
-recommends: {}
-build_requires: {}
-conflicts: {}
-provides:
-  POE::API::Peek:
-    file: lib/POE/API/Peek.pm
-    version: 1.19
-generated_by: Module::Build version 0.21
+  POE: 0.2601
+no_index:
+  directory:
+    - inc
+generated_by: Module::Install version 0.31
