--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         POE-API-Peek
-version:      1.0251
-version_from: lib/POE/API/Peek.pm
+version:      1.0465
+version_from: VERSION
 installdirs:  site
 requires:
-    POE:                           0.2802
+    POE:                           0.29
     Test::More:                    0
 
 distribution_type: module
