--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         POE-API-Peek
-version:      1.0465
-version_from: VERSION
-installdirs:  site
-requires:
-    POE:                           0.29
-    Test::More:                    0
-
+name: POE-API-Peek
+version: 1.06
+author: Matt Cashner (sungo@pobox.com)
+license: bsd
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+build_requires:
+  Test::More: 0
+requires:
+  perl: 5.6.1
+  POE: 0.29
+  Devel::Size: 0
+no_index:
+  directory:
+    - inc
+generated_by: Module::Install version 0.36
