--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,15 @@
-author: Matt Cashner (sungo@pobox.com)
+---
+author:
+  - 'Matt Cashner (sungo@pobox.com)'
 build_requires:
-  Module::Signature: 0
   Test::Distribution: 0
   Test::Pod::Coverage: 0
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: 'Module::Install version 0.72'
 license: bsd
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: POE-API-Peek
 no_index:
   directory:
@@ -15,5 +19,5 @@ requires:
   Devel::Size: 0
   POE: 0.38
   Test::More: 0
-  perl: 5.6.1
-version: 1.0802
+  perl: 5.006001
+version: 1.09
