--- a/META.yml
+++ b/META.yml
@@ -2,14 +2,17 @@
 author:
   - 'Matt Cashner (sungo@pobox.com)'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::Distribution: 0
   Test::Pod::Coverage: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.72'
+generated_by: 'Module::Install version 0.82'
 license: bsd
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: POE-API-Peek
 no_index:
   directory:
@@ -20,4 +23,6 @@ requires:
   POE: 1.0001
   Test::More: 0
   perl: 5.006001
-version: 1.32
+resources:
+  license: http://opensource.org/licenses/bsd-license.php
+version: 1.33
