--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,8 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::Distribution: 0
+  Test::More: 0
+  Test::NoWarnings: 0
   Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
@@ -21,8 +23,7 @@ no_index:
 requires:
   Devel::Size: 0
   POE: 1.0001
-  Test::More: 0
   perl: 5.006001
 resources:
   license: http://opensource.org/licenses/bsd-license.php
-version: 1.33
+version: 1.34
