--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,20 @@
 ---
+abstract: 'Peek into the internals of a running POE environment'
 author:
-  - 'Matt Cashner (sungo@pobox.com)'
-build_requires:
-  ExtUtils::MakeMaker: 6.42
-  Test::Distribution: 0
-  Test::More: 0
-  Test::NoWarnings: 0
-  Test::Pod::Coverage: 0
+  - 'sungo <sungo@sungo.us>'
+  - 'Yuval Kogman <nothingmuch@woobling.org>'
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.82'
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.102340, CPAN::Meta::Converter version 2.102400'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: POE-API-Peek
-no_index:
-  directory:
-    - inc
-    - t
 requires:
   Devel::Size: 0
   POE: 1.0001
-  perl: 5.006001
-resources:
-  license: http://opensource.org/licenses/bsd-license.php
-version: 1.34
+  Test::More: 0
+version: 2.16_1
