Import of SUNGO/POE-API-Peek-2.17 from CPAN.
gitpan-cpan-distribution: POE-API-Peek
gitpan-cpan-version:      2.17
gitpan-cpan-path:         SUNGO/POE-API-Peek-2.17.tar.gz
gitpan-cpan-author:       SUNGO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Peek into the internals of a running POE environment'
 author:
   - 'sungo <sungo@sungo.us>'
   - 'Yuval Kogman <nothingmuch@woobling.org>'
+  - "Chris 'BinGOs' Williams <bingos@cpan.org>"
 build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.31
@@ -15,6 +16,6 @@ meta-spec:
 name: POE-API-Peek
 requires:
   Devel::Size: 0
-  POE: 1.293
+  POE: 1.311
   Test::More: 0
-version: 2.16
+version: 2.17
