--- a/META.yml
+++ b/META.yml
@@ -4,11 +4,12 @@ author:
   - 'sungo <sungo@sungo.us>'
   - 'Yuval Kogman <nothingmuch@woobling.org>'
   - "Chris 'BinGOs' Williams <bingos@cpan.org>"
+  - 'Philip Gwyn <gwyn@cpan.org>'
 build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102340, CPAN::Meta::Converter version 2.102400'
+generated_by: 'Dist::Zilla version 4.200014, CPAN::Meta::Converter version 2.112150'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,4 +19,7 @@ requires:
   Devel::Size: 0
   POE: 1.311
   Test::More: 0
-version: 2.17
+resources:
+  homepage: https://github.com/bingos/poe-api-peek
+  repository: https://github.com/bingos/poe-api-peek
+version: 2.18
