--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200014, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Dist::Zilla version 4.300006, CPAN::Meta::Converter version 2.113640'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,5 +21,5 @@ requires:
   Test::More: 0
 resources:
   homepage: https://github.com/bingos/poe-api-peek
-  repository: https://github.com/bingos/poe-api-peek
-version: 2.19
+  repository: https://github.com/bingos/poe-api-peek.git
+version: 2.20
